--- a/homework04/Dockerfile
+++ b/homework04/Dockerfile
@@ -7,6 +7,10 @@ RUN pip3 install pytest==7.0.0
 
 COPY ml_data_analysis.py /code/ml_data_analysis.py
 
+COPY Meteorite_Landings.json /code/Meteorite_Landings.json
+
+COPY test_ml_data_analysis.py /code/test_ml_data_analysis.py
+
 RUN chmod +rx /code/ml_data_analysis.py
    
 ENV PATH "/code:$PATH"
