--- a/homework06/s-shah-test-flask-deployment.yml
+++ b/homework06/s-shah-test-flask-deployment.yml
@@ -1,1 +1,29 @@
 ---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: s-shah-app-deployment
+  labels:
+    username: s-shah
+    env: test
+    app: s-shah-test-redis
+spec:
+  replicas: 2
+  selector:
+    matchLabels:
+      app: s-shah-test-flask
+   template:
+     metadata:
+       labels:
+         app: s-shah-test-flask
+	 username: s-shah
+	 env: test
+    spec:
+      containers:
+        - name: s-shah-test-flask
+	  imagePullPolicy: Always
+          image: serenashah/k8s-redis-flask:latest
+          command: ['python3', 'core.py', ip_address]
+          ports:
+          - name: http
+            containerPort: 5000
