--- a/homework06/s-shah-test-flask-service.yml
+++ b/homework06/s-shah-test-flask-service.yml
@@ -1,1 +1,13 @@
 ---
+apiVersion: v1
+kind: Service
+metadata:
+  name: s-shah-flask-service
+spec:
+  type: ClusterIP
+  selector:
+    app: s-shah-test-flask
+  ports:
+  - name: s-shah-test-flask
+    port: 5028
+    targetPort: 5000
