--- a/homework06/s-shah-test-redis-service.yml
+++ b/homework06/s-shah-test-redis-service.yml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: s-shah-service
+  name: s-shah-redis-service
 spec:
   type: ClusterIP
   selector:
